--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>resume-editor</title>
+    <script src="//at.alicdn.com/t/font_691589_dipbr6vbcb2fn7b9.js"></script> 
   </head>
   <body>
     <noscript>
